WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22111
[Transforms] Event handling in <video> controls is broken if the video is transformed
https://bugs.webkit.org/show_bug.cgi?id=22111
Summary
[Transforms] Event handling in <video> controls is broken if the video is tra...
Simon Fraser (smfr)
Reported
2008-11-06 12:15:44 PST
Video control seem to have event handling issues when the video is transformed, or has a transformed parent.
Bug 22109
fixes the slider issues, but there are others (e.g. you can click the play button, and it responds, but the video does not play).
Attachments
Testcase
(338 bytes, text/html)
2008-11-06 12:19 PST
,
Simon Fraser (smfr)
no flags
Details
Fixed testcase
(386 bytes, text/html)
2008-11-06 12:20 PST
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(6.02 KB, patch)
2008-11-19 18:31 PST
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-11-06 12:19:25 PST
Created
attachment 24952
[details]
Testcase
Simon Fraser (smfr)
Comment 2
2008-11-06 12:20:53 PST
Created
attachment 24953
[details]
Fixed testcase
Simon Fraser (smfr)
Comment 3
2008-11-19 18:31:13 PST
Created
attachment 25299
[details]
Patch, testcase, changelog
Antti Koivisto
Comment 4
2008-11-19 18:40:18 PST
Comment on
attachment 25299
[details]
Patch, testcase, changelog r=me That FIXME in MediaPlayer could be more enlightening.
Simon Fraser (smfr)
Comment 5
2008-11-19 18:44:45 PST
Fixed the comment, and committed: Committed
r38612
M WebCore/ChangeLog M WebCore/platform/graphics/MediaPlayer.h M WebCore/rendering/RenderMedia.cpp A LayoutTests/media/video-controls-transformed-expected.txt A LayoutTests/media/video-controls-transformed.html M LayoutTests/ChangeLog
r38612
= 154846681526fcb9b0fb6b824768fa0c30f14020 (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug