        Reviewed by Antti Koivisto

https://bugs.webkit.org/show_bug.cgi?id=22111

        Fix hit testing in controls on transformed video elements
        by replacing absoluteBoundingBoxRect().contains() with
        code that maps the point into local coords, taking
        transforms into account.

        Test: media/video-controls-transformed.html

        * platform/graphics/MediaPlayer.h:
        * rendering/RenderMedia.cpp:
        (WebCore::rendererContainsPoint):
        (WebCore::RenderMedia::forwardEvent):

Canonical link: https://commits.webkit.org/30821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38612 268f45cc-cd09-0410-ab3c-d52691b4dbfc